<resources>
    <string name="app_name">M-Physics</string>
    <string name="menu_credits">About</string>
    <string name="title_activity_main">M-Physics</string>
    <string name="title_question">What do you want to learn about?</string>
    <string name="WhatButton">What is Physics?</string>
    <string name="WhereButton">Where should I start?</string>
    <string name="KinematicsButton">Kinematics</string>
    <string name="NewtonsLawsButton">Newton\'s Laws of Motion</string>
    <string name="WEPButton">Work, Energy, and Power</string>
    <string name="test_prep_text">Information to prepare for Standardized Tests:</string>
    <string name="title_activity_what_is_physics">M-Physics</string>
    <string name="what_is_physics_title">What is Physics?</string>
    <string name="what_is_physics_explanation">\t<u>Physics</u> is the field of science that has to do with the physical world around us. This includes topics like motion, energy, matter, and a ton of other subjects as well. There\'s a lot of different stuff in the field (and the field does overlap a bit with other subjects), so it\'s difficult to give an exact definition of what physics really is.</string>
    <string name="title_activity_where_to_start">M-Physics</string>
    <string name="where_to_start_title">Where should I start?</string>
    <string name="where_to_start_explanation">\tPhysics is a very broad field. So what you decide to start with may be different from what someone else would start with! However, there are some concepts that you should know regardless of what you want to learn about. The lessons on <u>Units</u> and <u>Mass vs. Weight</u> are useful for everything, so you should probably look at those. <u>Kinematics</u> and <u>Newton\'s Laws of Motion</u> are also really helpful.\n\n\tHowever, depending on what you know already, you may decide to start somewhere more advanced - and that\'s fine! If you don\'t know what direction to go in, just head down the main menu, starting with <u>Units</u>.</string>
    <string name="goodluck">Best of luck!</string>
    <string name="MassWeightButton">Mass vs. Weight</string>
    <string name="title_activity_kinematics">M-Physics</string>
    <string name="kineqs_title">The Equations of Kinematics</string>
    <string name="kineqs_explanation">\tAn object\'s motion in two dimensions can be simulated using a set of five equations. These equations relate five key variables pertaining to the object\'s motion. The variables are:</string>
    <string name="kineqs_variableList">-Initial Velocity (<i>v<sub>i</sub></i> or <i>v<sub>0</sub></i>)\n-Final Velocity (<i>v<sub>f</sub></i>)\n-Acceleration (<i>a</i>)\n-Distance (<i>d</i>)\n-Elapsed Time (<i>t</i>)</string>
    <string name="kineqs_equationExplanation">The equations that involve these variables are:</string>
    <string name="kineqs_equationList"><i>v<sub>f</sub> = v<sub>i</sub> + at\nv<sub>f</sub><sup>2</sup> = v<sub>i</sub><sup>2</sup> + 2ad\nd = v<sub>i</sub>t + &#189;at<sup>2</sup>\nd = &#189;(v<sub>i</sub> + v<sub>f</sub>)t\nd = v<sub>f</sub>t - &#189;at<sup>2</sup></i></string>
    <string name="accelerometer_test_x_accel">x-accel =</string>
    <string name="accelerometer_test_y_accel">y-accel =</string>
    <string name="accelerometer_test_z_accel">z-accel =</string>
    <string name="wep_titletext">Work, Energy, and Power</string>
    <string name="wep_intro">\tThe words <u>work</u>, <u>energy</u>, and <u>power</u> might seem pretty odd at first glance. However, they\'re actually pretty simple to understand!</string>
    <string name="work_title">Work</string>
    <string name="energy_title">Energy</string>
    <string name="power_title">Power</string>
    <string name="energy_explanation">\t<b>Energy</b> measures how much work you can do. It\'s pretty closely related to work - like work, energy is measured in Joules (J) also. Energy is pretty unique, though - it comes in a lot of \"forms\". The most common ones you\'ll probably see are <u>kinetic energy</u> and <u>potential energy</u>. Click the top button below to learn about the different types of energy, and click the bottom button below to learn more about energy in general.</string>
    <string name="work_explanation">\t<b>Work</b> is done when a force causes an object to move a certain distance. The formula for work is <i>W = Fd</i>, where <i>W</i> is the work done, <i>F</i> is the force causing the work, and <i>d</i> is the distance the object moves because of the force. So if you push a box 3 meters across the ground with a force of 10 Newtons, you will do 30 <i>Joules</i> of work. The SI unit for work is the <u>joule</u> (abbreviated as <i>J</i>).</string>
    <string name="power_explanation">\t<b>Power</b> is really simple! It might sound intimidating, but it isn\'t. It is defined as the amount of work done over time. The mathematical formula for this is <i>P = W/t</i>. So, if you push a box 3 meters across the ground with a force of 10 Newtons and do it in 5 seconds, the power exerted is (10*3)/5 = 30/5 = 6 Watts. (The SI unit for power is the <i>Watt</i>, abbreviated <i>W</i>.)</string>
    <string name="TypesOfEnergyButton">Types of Energy</string>
    <string name="MiscEnergyButton">More About Energy</string>
    <string name="ImageErrorMsg">ERROR: Image cannot be found.</string>
    <string name="cannon_initialvelocity_desc">Initial Velocity (<i>m/s</i>):</string>
    <string name="cannon_angle_desc">Cannon Angle (<i>degrees</i>):</string>
    <string name="CannonStartButton">Go!</string>
    <string name="cannon_angle_et_def">45</string>
    <string name="cannon_initialvelocity_et_def">10</string>
    <string name="cannon_t">Elapsed time:</string>
    <string name="cannon_dy">Vertical Distance to peak of path:</string>
    <string name="cannon_dx">Horizontal Distance traveled:</string>
    <string name="cannon_verteq"><i>y = </i></string>
    <string name="cannon_horzeq"><i>x = </i></string>
    <string name="cannon_velocity_text">Initial Velocity: </string>
    <string name="cannon_angle_text">Launch Angle: </string>
    <string name="CannonClearButton">Clear</string>
    <string name="angproj_title">Angular Projectiles</string>
    <string name="angproj_intro">\tAngular projectile motion problems might sound difficult, but they really aren\'t! In <u>horizontal projectile motion problems</u>, the projectiles are, well, horizontal. In <u>angular projectile motion problems</u>, however, the projectiles don\'t get launched directly left or right. Instead, they\'re launched \"at an angle\" - like in the diagram below:</string>
    <string name="angproj_prob_intro">\tAn example problem with angular projectiles can be seen below. Let\'s do it together:</string>
    <string name="angproj_problem"><i>A ball is launched at a velocity of 15 m/s at an angle of 60 degrees. What is the highest point the ball reaches, and how far does the ball travel horizontally until it hits the ground?</i></string>
    <string name="angproj_prob_exp1">\tJust like when we started solving the horizontal projectile problem, let\'s draw a diagram of the situation to help understand it:</string>
    <string name="angproj_prob_exp2">\tNow we have a clear picture of what we want to know. We\'re solving for <i>d<sub>x</sub></i> and <i>d<sub>y</sub></i> in the above diagram. If this were an only-horizontal projectile motion problem, we\'d just plug in 15 m/s as <i>v<sub>ix</sub></i>, but we can\'t do that here, since the ball is being launched at an angle. What are we supposed to do to get the ball\'s initial velocity?</string>
    <string name="angproj_prob_exp3">\tThe answer is one you\'ll run into often in physics - you <i>resolve</i> the velocity of the ball into an x-direction and a y-direction. For any moving object in two dimensions, its <b>horizontal velocity</b> is equal to its total velocity multiplied by the <u>cosine</u> of the angle to the horizontal at which the ball is moving. Its <b>vertical velocity</b> is equal to the total velocity of the ball multiplied by the <u>sine</u> of the same angle. Put in another way:</string>
    <string name="angproj_velocitytrig"><i>v<sub>x</sub> = vcos(&#920;)</i>\n<i>v<sub>y</sub> = vsin(&#920;)</i></string>
    <string name="angproj_prob_exp4">\t(The sign <i>&#920;</i> is called a <u>theta</u> - it\'s a Greek Letter used in math often to refer to angle measurements.)</string>
    <string name="angproj_prob_exp5">\tSo let\'s get our new values for <i>v<sub>ix</sub></i> and <i>v<sub>iy</sub></i> by plugging in <i>v</i> and <i>&#920;</i>:</string>
    <string name="angproj_pluggingin"><i>v<sub>ix</sub> = (15)cos(60) = 15(0.5) = 7.5 m/s</i>\n<i>v<sub>iy</sub> = (15)sin(60) = 15(0.866) = 12.99 m/s</i></string>
    <string name="angproj_prob_exp6">\tNow that we know our initial velocity values, we can solve this like a normal horizontal projectile motion problem. Let\'s solve for <i>d<sub>y</sub></i> first (order doesn\'t matter most of the time, however):</string>
    <string name="angproj_dy1"><i>v<sub>fy</sub><sup>2</sup> = v<sub>iy</sub><sup>2</sup> + 2(a<sub>y</sub>)(d<sub>y</sub>)</i>\n</string>
    <string name="angproj_dyexp1">\tIf we\'re solving for <i>d<sub>y</sub></i>, the distance from the ground to the top of the ball\'s vertical path, we know that the vertical velocity of the ball there should be exactly zero. Think about it: The velocity goes from positive (the ball moving up) to negative (the ball falling down) at that exact time.</string>
    <string name="angproj_dy2"><i>(0) = (12.99)<sup>2</sup> + 2(-9.8)(d<sub>y</sub>)</i>\n</string>
    <string name="angproj_dyexp2">\tWe substitute in -9.8 for <i>a<sub>y</sub></i> because the vertical acceleration of the ball should equal acceleration due to gravity if the ball is a projectile.</string>
    <string name="angproj_dy3"><i>0 = 168.74 - 19.6(d<sub>y</sub>)</i>\n<i>19.6(d<sub>y</sub>) = 168.74</i>\n<i>d<sub>y</sub> = 8.61 meters</i></string>
    <string name="angproj_dxintro">\tNow let\'s solve the next part of the question: how far does the ball travel horizontally? This will require us to use <i>v<sub>x</sub></i>. Remember how we found horizontal distance in horizontal projectile motion?</string>
    <string name="angproj_dx1"><i>d<sub>x</sub> = v<sub>x</sub>t + &#189;a<sub>x</sub>t<sup>2</sup></i>\n</string>
    <string name="angproj_dx1e">\tPlug in everything you can so far:</string>
    <string name="angproj_dx2"><i>d<sub>x</sub> = 7.5t + &#189;(0)t<sup>2</sup></i>\n</string>
    <string name="angproj_dx2e">\tSince projectiles don\'t accelerate horizontally, <i>a<sub>x</sub></i> is 0. We\'re left with:</string>
    <string name="angproj_dx3"><i>d<sub>x</sub> = 7.5t</i>\n</string>
    <string name="angproj_dx3e">\tNow we have to solve for time (<i>t</i>) - the time it takes for the ball to hit the ground again. How can we solve for this?\n\tSince the path of a projectile is <u>symmetrical</u>, and the ball spends the same amount of time going up to the peak of its launch as it does falling down to the ground from the peak, we can say that:</string>
    <string name="angproj_dx4"><i>v<sub>fy</sub> = v<sub>iy</sub> + (a<sub>y</sub>)(t)</i>\n<i>-12.99 = 12.99 + (-9.8)t</i>\n<i>-25.98 = -9.8t</i>\n<i>t = 2.65 seconds</i></string>
    <string name="angproj_dx4e">\tBy using the kinematic equation "<i>v<sub>f</sub> = v<sub>i</sub> + at</i>", we can solve for the time it takes for the ball to hit the ground again. Let\'s plug the time in now:</string>
    <string name="angproj_dx5"><i>d<sub>x</sub> = 7.5(2.65)</i>\n<i>d<sub>x</sub> = 19.875 meters</i></string>
    <string name="angproj_dx5e">\tThere you have it! We can see that the ball travels 19.875 meters horizontally after being thrown.</string>
</resources>