<!--  Copyright 2013 Marcus Fedarko
Contact Email: marcus.fedarko@gmail.com

This file is part of M-Physics.
 
     M-Physics is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  M-Physics is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with M-Physics.  If not, see <http://www.gnu.org/licenses/>. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/wep_titletext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/wep_titletext"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/wep_intro"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/wep_titletext"
	        android:layout_centerHorizontal="true"
	        android:text="@string/wep_intro" />	
	           
	    <TextView
	        android:id="@+id/work_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/wep_intro"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/work_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
	        android:id="@+id/work_explanation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/work_title"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/work_explanation" />	 
	    	    	    
	    <TextView
	        android:id="@+id/energy_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/work_explanation"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/energy_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    

		<TextView
	        android:id="@+id/energy_explanation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/energy_title"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/energy_explanation" />	        

		<Button
	        android:id="@+id/TypesOfEnergyButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/energy_explanation"
	        android:layout_centerHorizontal="true"
	        android:text="@string/TypesOfEnergyButton"
	        android:onClick="goToTypesOfEnergyScreen" />
					
		<Button
	        android:id="@+id/MiscEnergyButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/TypesOfEnergyButton"
	        android:layout_centerHorizontal="true"
	        android:text="@string/MiscEnergyButton"
	        android:onClick="goToEnergyScreen" />
						        
	    <TextView
	        android:id="@+id/power_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/MiscEnergyButton"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/power_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	
	         
		<TextView
	        android:id="@+id/power_explanation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/power_title"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/power_explanation" />	        
	    	    	    	    	    	
	</RelativeLayout>
</ScrollView>
