<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright 2013 Marcus Fedarko
Contact Email: marcus.fedarko@gmail.com

This file is part of M-Physics.
 
     M-Physics is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  M-Physics is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with M-Physics.  If not, see <http://www.gnu.org/licenses/>. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accelerometer_test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/accelerometer_test_sprite"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ImageErrorMsg"
        android:scaleType="center"
        android:src="@drawable/accelerometer_test_sprite" />

    <TextView
        android:id="@+id/accelerometer_test_xAccelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/accelerometer_test_x_accel" />

    <TextView
        android:id="@+id/accelerometer_test_yAccelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/accelerometer_test_xAccelText"
        android:text="@string/accelerometer_test_y_accel" />
        
    <TextView
        android:id="@+id/accelerometer_test_zAccelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/accelerometer_test_yAccelText"
        android:text="@string/accelerometer_test_z_accel" />
    
</RelativeLayout>
